--- a/assignment_1/pubspec.yaml
+++ b/assignment_1/pubspec.yaml
@@ -4,12 +4,13 @@ version: 1.0.0
 # repository: https://github.com/my_org/my_repo
 
 environment:
-  sdk: ^3.3.0
+  sdk: ^3.6.0
 
 # Add regular dependencies here.
 dependencies:
   # path: ^1.8.0
 
 dev_dependencies:
+  code_coverage: ^2.0.1
   lints: ^3.0.0
   test: ^1.24.0
